--- a/src/package.json
+++ b/src/package.json
@@ -22,5 +22,9 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue-bootstrap-pagination": "^2.10.3",
+        "vue-pagination-2": "^3.0.91"
     }
 }
